# src/api/generated/src/apis/admin.rs
@@ -34,6 +34,22 @@ pub enum NodesNodeIdGetResponse {
     Status500_ServerError(models::Error),
 }
 
+#[derive(Debug, PartialEq, Serialize, Deserialize)]
+#[must_use]
+#[allow(clippy::large_enum_variant)]
+pub enum NodesNodeIdPostResponse {
+    /// The node status was changed successfully
+    Status204_TheNodeStatusWasChangedSuccessfully,
+    /// Authentication error
+    Status401_AuthenticationError(models::Error),
+    /// Not found
+    Status404_NotFound(models::Error),
+    /// Conflict
+    Status409_Conflict(models::Error),
+    /// Server error
+    Status500_ServerError(models::Error),
+}
+
 /// Admin
 #[async_trait]
 #[allow(clippy::ptr_arg)]
@@ -66,4 +82,19 @@ pub trait Admin<E: std::fmt::Debug + Send + Sync + 'static = ()>: super::ErrorHa
         path_params: &models::NodesNodeIdGetPathParams,
         query_params: &models::NodesNodeIdGetQueryParams,
     ) -> Result<NodesNodeIdGetResponse, E>;
+
+    /// Change node status.
+    ///
+    /// NodesNodeIdPost - POST /nodes/{nodeID}
+    async fn nodes_node_id_post(
+        &self,
+
+        method: &Method,
+        host: &Host,
+        cookies: &CookieJar,
+        claims: &Self::Claims,
+        path_params: &models::NodesNodeIdPostPathParams,
+        query_params: &models::NodesNodeIdPostQueryParams,
+        body: &models::NodeStatusChange,
+    ) -> Result<NodesNodeIdPostResponse, E>;
 }
